--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "ownerNumber": ["62887435047326@s.whatsapp.net"],
-  "botName": "AlphabotMD",
-  "message" : "62887435047326",
+  "ownerNumber": ["6285922480867@s.whatsapp.net"],
+  "botName": "ChruzzXd",
+  "message" : "6285922480867",
   "sessionName": "session",
   "pathImg": "./media/lol.jpg"
 }
